k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-1
  labels:
    name: test-1
    app: test-1
